fix text-align center with grids

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -87,8 +87,8 @@ body {
     position: absolute;
     width: 73%;
     right: 0;
-    text-align: center;
     .heading {
+      text-align: center;
       background-color: #222;
       padding: 1em 0;
       font-size: 13px;
@@ -103,6 +103,7 @@ body {
         position: relative;
         padding: 1em 0;
         a {
+          text-align: center;
           display: block;
           width: 100%;
           height: 100%;
